# klorophylle

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
src/agent/: CMakeLists.txt  agent.cpp  agenttools.cpp  agenttools.h  confirmingtool.cpp  confirmingtool.h  contextbuilder.cpp  contextbuilder.h  fakewebfetcher.h  inmemorysecretstore.h  isecretstore.h  iwebfetcher.h  networkwebfetcher.cpp  networkwebfetcher.h  transcript.cpp  transcript.h  webcontent.cpp  webcontent.h
src/ble/: CMakeLists.txt  blescanner.cpp  blescanner.h  discovereddevice.h  gattcommandsession.cpp  gattcommandsession.h  gatthistorysession.cpp  gatthistorysession.h  gattsession.cpp  gattsession.h
src/core/: CMakeLists.txt  aggregate.cpp  aggregate.h  axis.cpp  axis.h  binding.cpp  binding.h  bucket.h  carestatus.cpp  carestatus.h  clock.cpp  clock.h  format.cpp  format.h  historysync.cpp  historysync.h  ids.h  ikeyvaluestore.h  inmemorykeyvaluestore.h  liveness.cpp  liveness.h  log.cpp  log.h  reading.h  sensor.h  units.cpp  units.h
src/devices/: CMakeLists.txt  advertisementdata.h  advertisementparser.cpp  advertisementparser.h  device.h  device_atc.h  device_bparasite.h  device_bthome.h  device_cgdn1.h  device_esp32_airqualitymonitor.h  device_esp32_geigercounter.h  device_esp32_higrow.h  device_ess_generic.h  device_flowercare.h  device_flowerpower.h  device_hygrotemp_clock.h  device_hygrotemp_lywsdcgq.h  device_hygrotemp_square.h  device_jqjcy01ym.h  device_parrotpot.h  device_qingping.h  device_qingping_cgd1.h  device_qingping_cgdk2.h  device_qingping_cgg1.h  device_qingping_cgp1w.h  device_ropot.h  device_thermobeacon.h  device_wp6003.h  device_xiaomi.h  deviceregistry.cpp  deviceregistry.h  gatthistoryprofile.h  gattprofile.h  mibeacon_auth.cpp  mibeacon_auth.h
src/gui/: CMakeLists.txt  agentviewmodel.cpp  agentviewmodel.h  alertcontroller.cpp  alertcontroller.h  appcontext.cpp  appcontext.h  buildinfo.cpp  buildinfo.h  careevaluation.cpp  careevaluation.h  carethresholdsmodel.cpp  carethresholdsmodel.h  catalogsearchmodel.cpp  catalogsearchmodel.h  devicesortfiltermodel.cpp  devicesortfiltermodel.h  discovereddevicesmodel.cpp  discovereddevicesmodel.h  historysynccontroller.cpp  historysynccontroller.h  inotificationsink.h  journalformat.cpp  journalformat.h  livereadingsmodel.cpp  livereadingsmodel.h  navigationcontroller.cpp  navigationcontroller.h  plantcaremodel.cpp  plantcaremodel.h  plantjournalmodel.cpp  plantjournalmodel.h  plantlistmodel.cpp  plantlistmodel.h  providerdescriptor.cpp  providerdescriptor.h  readingingester.cpp  readingingester.h  registeredsensorsmodel.cpp  registeredsensorsmodel.h  (+4 more)
src/gui/qml/: AIInsightsScreen.qml  AboutScreen.qml  AiSettings.qml  AiSetupWizard.qml  AppearanceSettings.qml  DataSettings.qml  DuplicateDialog.qml  ExportScreen.qml  GlobalJournalScreen.qml  (+15 more)
src/karness/: CMakeLists.txt  agenterror.h  agentsession.cpp  agentsession.h  anthropiccodec.cpp  anthropiccodec.h  anthropicdialect.cpp  anthropicdialect.h  anthropicprovider.h  chatcompletionscodec.cpp  chatcompletionscodec.h  chatcompletionsdialect.cpp  chatcompletionsdialect.h  decodedchunk.h  dialect.h  geminicodec.cpp  geminicodec.h  geminidialect.cpp  geminidialect.h  geminiprovider.h  inferencerequest.h  iprovider.h  itool.h  message.h  messageaccumulator.cpp  messageaccumulator.h  messagecodec.cpp  messagecodec.h  modelcaps.h  openaicompatprovider.cpp  openaicompatprovider.h  providerconfig.h  reasoningbudget.h  responsescodec.cpp  responsescodec.h  responsesdialect.cpp  responsesdialect.h  responsesprovider.h  sseparser.cpp  sseparser.h  (+6 more)
src/persistence/: CMakeLists.txt  agentconversation.h  attachment.h  backupimporter.cpp  backupimporter.h  backupserializer.cpp  backupserializer.h  backuptokens.cpp  backuptokens.h  catalogcsv.cpp  catalogcsv.h  catalogentry.h  catalogthresholds.cpp  catalogthresholds.h  csvcatalogrepository.cpp  csvcatalogrepository.h  database.cpp  database.h  diskattachmentfilestore.cpp  diskattachmentfilestore.h  iagentrepository.h  iattachmentfilestore.h  iattachmentrepository.h  ibindingrepository.h  icarethresholdrepository.h  icatalogrepository.h  ijournalrepository.h  inmemoryagentrepository.cpp  inmemoryagentrepository.h  inmemoryattachmentfilestore.cpp  inmemoryattachmentfilestore.h  inmemoryattachmentrepository.cpp  inmemoryattachmentrepository.h  inmemorybindingrepository.cpp  inmemorybindingrepository.h  inmemorycarethresholdrepository.cpp  inmemorycarethresholdrepository.h  inmemoryjournalrepository.cpp  inmemoryjournalrepository.h  inmemoryplantrepository.cpp  (+50 more)
src/style/: BusyIndicator.qml  Button.qml  CMakeLists.txt  Card.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  Icon.qml  Label.qml  ListItem.qml  MarkdownLabel.qml  Menu.qml  MenuItem.qml  PlantCard.qml  ProgressBar.qml  PulsingNode.qml  RadioButton.qml  ReasoningDisclosure.qml  ScrollIndicator.qml  SectionHeader.qml  StatusPill.qml  Switch.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolButton.qml  ToolTip.qml  iconbase.cpp  iconbase.h  iconinfo.h  settingsstore.cpp  settingsstore.h  themecontroller.cpp  themecontroller.h  tokens.h  uiformat.cpp  uiformat.h
tests/: CMakeLists.txt  fakeprovider.cpp  fakeprovider.h  faketool.h  karnessfixtures.h  mockhttpserver.cpp  mockhttpserver.h  test_advertisement.cpp  test_agentrepository.cpp  test_agentsession.cpp  test_agenttools.cpp  test_agentviewmodel.cpp  test_aggregate.cpp  test_alertcontroller.cpp  test_anthropicprovider.cpp  test_appcontext.cpp  test_attachmentrepository.cpp  test_axis.cpp  test_backupimport.cpp  test_backupserialize.cpp  test_backuptokens.cpp  test_binding.cpp  test_bindingrepository.cpp  test_bucket.cpp  test_careevaluation.cpp  test_carestatus.cpp  test_carethresholdrepository.cpp  test_carethresholdsmodel.cpp  test_catalogcsv.cpp  test_catalogrepository.cpp  test_catalogthresholds.cpp  test_changelog.cpp  test_chatcompletionscodec.cpp  test_confirmingtool.cpp  test_contextbuilder.cpp  test_devices.cpp  test_filestore.cpp  test_format.cpp  test_gattcommands.cpp  test_gattdecoders.cpp  (+35 more)
(+49 files in other folders)
